Wed Sep 11 20:19 2013 CDT
    * lib/poll.js: Add support for hidden polls
    * lib/channel.js: Check permissions for viewing hidden polls
    * lib/chatcommand.js: Add /hpoll for opening hidden polls
    * www/assets/js/util.js: Update poll interface to include a checkbox
      for whether or not to hide a poll.  Update permissions interface to
      allow for changing the permission to view obscured polls.

Tue Sep 10 22:40 2013 CDT
    * www/account.html, www/acp.html, www/login.html: 
      Import www/assets/js/data.js for easy access to user preferences
    * www/assets/js/account.js, www/assets/js/acp.js: remove redundant
      cookie util functions
    * www/assets/js/data.js, www/assets/js/util.js, www/assets/js/iourl.js:
      Add a user option to enable SSL for websockets and API calls
    * www/assets/js/ui.js: Add a warning if the user loaded the page over
      SSL (because some media players throw warnings and others don't work
      at all (Twitch.tv, Justin.tv: go eat a dick)
    * www/assets/js/player.js: Prevent race conditions for media types that
      depend on swfobject

Tue Sep 10 17:17 2013 CDT
    * www/assets/js/player.js: Fix loading over SSL for everything except
      TwitchTV and JustinTV

Tue Sep 10 16:45 2013 CDT
    * lib/channel.js: Don't attempt to emit to SSL sockets if it's disabled

Tue Sep 10 16:34 2013 CDT
    * www/channel.html, www/assets/js/jwplayer.js: Cache jwplayer script
      locally since their server doesn't support SSL

Tue Sep 10 16:10 2013 CDT
    * lib/server.js, lib/api.js: Implicitly trust X-Forwarded-For when the
      source ip is 127.0.0.1

Tue Sep 10 14:09 2013 CDT
    * lib/config.js, lib/server.js: Add a config key for the passphrase
      to the ssl key.

Mon Sep  9 22:10 2013 CDT
    * lib/acp.js: Change acp-channel-unload callback to duplicate the list
      of users in the channel to prevent concurrent modification while
      kicking