@@ -38,7 +38,7 @@ module.exports = function (Server) {
                      channel.playlist.current.media.pack() :
                      {};
         data.usercount = channel.users.length;
-        data.afkcount = channel.afkers.length;
+        data.voteskip_eligible = channel.calcVoteskipMax();
         data.users = [];
         for(var i in channel.users)
             if(channel.users[i].name !== "")
