@@ -34,7 +34,6 @@ var Channel = function(name, Server) {
     // Initialize defaults
     self.registered = false;
     self.users = [];
-    self.afkers = [];
     self.playlist = new Playlist(self);
     self.position = -1;
     self.drinks = 0;
@@ -67,6 +66,7 @@ var Channel = function(name, Server) {
         pollctl: 1.5,
         pollvote: -1,
         viewhiddenpoll: 1.5,
+        voteskip: -1,
         mute: 1.5,
         kick: 1.5,
         ban: 2,
@@ -842,9 +842,6 @@ Channel.prototype.userLeave = function(user) {
     var idx = this.users.indexOf(user);
     if(idx >= 0 && idx < this.users.length)
         this.users.splice(idx, 1);
-    idx = this.afkers.indexOf(user.name.toLowerCase());
-    if(idx >= 0 && idx < this.afkers.length)
-        this.afkers.splice(idx, 1);
     this.checkVoteskipPass();
     this.broadcastUsercount();
     if(user.name != "") {
@@ -1194,9 +1191,21 @@ Channel.prototype.broadcastChatFilters = function() {
     }
 }
 
+Channel.prototype.calcVoteskipMax = function () {
+    var self = this;
+    // good ol' map-reduce
+    return self.users.map(function (u) {
+        if (!self.hasPermission(u, "voteskip"))
+            return 0;
+        return u.meta.afk ? 0 : 1;
+    }).reduce(function (a, b) {
+        return a + b;
+    });
+};
+
 Channel.prototype.broadcastVoteskipUpdate = function() {
     var amt = this.voteskip ? this.voteskip.counts[0] : 0;
-    var count = this.users.length - this.afkers.length;
+    var count = this.calcVoteskipMax();
     var need = this.voteskip ? Math.ceil(count * this.opts.voteskip_ratio) : 0;
     for(var i = 0; i < this.users.length; i++) {
         if(Rank.hasPermission(this.users[i], "seeVoteskip") ||
@@ -1740,6 +1749,9 @@ Channel.prototype.tryVoteskip = function(user) {
     if(!this.opts.allow_voteskip) {
         return;
     }
+
+    if(!this.hasPermission(user, "voteskip"))
+        return;
     // Voteskip = auto-unafk
     user.setAFK(false);
     user.autoAFK();
@@ -1758,13 +1770,8 @@ Channel.prototype.checkVoteskipPass = function () {
     if(!this.voteskip)
         return false;
 
-    var count = this.users.length - this.afkers.length;
+    var count = this.calcVoteskipMax();
     var need = Math.ceil(count * this.opts.voteskip_ratio);
-    if(this.server.cfg["debug"]) {
-        console.log("afkers=", this.afkers.length);
-        console.log("users =", this.users.length);
-        console.log("DBG", this.voteskip.counts[0], "/", need);
-    }
     if(this.voteskip.counts[0] >= need)
         this.playNext();
 
