@@ -89,14 +89,9 @@ User.prototype.setAFK = function (afk) {
     var chan = this.channel;
     this.meta.afk = afk;
     if(afk) {
-        if(chan.afkers.indexOf(this.name.toLowerCase()) == -1)
-            chan.afkers.push(this.name.toLowerCase());
         if(chan.voteskip)
             chan.voteskip.unvote(this.ip);
-    }
-    else {
-        if(chan.afkers.indexOf(this.name.toLowerCase()) != -1)
-            chan.afkers.splice(chan.afkers.indexOf(this.name.toLowerCase()), 1);
+    } else {
         this.autoAFK();
     }
     chan.checkVoteskipPass();
